RESOLVED FIXED268359
[UnifiedPDF] Annotation highlight is misplaced
https://bugs.webkit.org/show_bug.cgi?id=268359
Summary [UnifiedPDF] Annotation highlight is misplaced
Sammy Gill
Reported 2024-01-29 22:41:22 PST
Opening a PDF and zooming in/out should still allow you to activate a text annotation. Opening a PDF and clicking on a text annotation works, but that functionality breaks when you zoom in/out
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-29 22:41:48 PST
Simon Fraser (smfr)
Comment 2 2024-02-13 17:31:30 PST
Clicking works, but the highlight paints in the wrong place.
Simon Fraser (smfr)
Comment 3 2024-02-13 17:36:30 PST
EWS
Comment 4 2024-02-13 21:10:48 PST
Committed 274607@main (123df1a5b3b0): <https://commits.webkit.org/274607@main> Reviewed commits have been landed. Closing PR #24389 and removing active labels.
Sammy Gill
Comment 5 2024-05-03 10:45:16 PDT
*** Bug 269029 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.